# OC_MAI

./: CMakeLists.txt  CMakePresets.json  README.md
CourseProject/: CmakeLists.txt  reportCP.docx
CourseProject/src/client/: main.cpp
CourseProject/src/server/: main.cpp
lab1/: CMakeLists.txt  report1.docx
lab1/src/: child1.cpp  child2.cpp  parent.cpp
lab2/: CMakeLists.txt  report2.docx
lab2/src/: filters.cpp  filters.h  main.cpp  matrix.cpp  matrix.h
lab2/test/: filters_test.cpp
lab3/: CMakeLists.txt  report3.docx
lab3/src/: child1.cpp  child2.cpp  parent.cpp
lab4/: CMakeLists.txt  report4.docx
lab4/src/: func1.cpp  func1.h  func2.cpp  func2.h  main1.cpp  main2.cpp
lab5-7/: CmakeLists.txt  report5-7.docx
lab5-7/src/master/: binary_tree.h  main.cpp
lab5-7/src/worker/: main.cpp
